<resources>
    <string name="app_name">ElectricBillManage</string>
    <string name="dashboard">Dashboard</string>
    <string name="bill">Bills</string>
    <string name="complaints">Complaints</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>

    <string name="username">Username</string>
    <string name="user_email">abc@gmail.com</string>
    <string name="tempPasswordString">password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_1">Trends</string>
    <string name="dashboard_2">Usage</string>
    <string name="dashboard_3">Analysis</string>

    <string name="EmailAddressHint">Email Address</string>
    <string name="PasswordHint">Password</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="LoginButtonText">Login</string>
    <string name="IncorrectEmailOrPass">Incorrect Email or Password</string>

    <string name="MobileHint">Mobile Phone</string>
    <string name="AddressHint">Address</string>
    <string name="SignupButtonText">Create Account</string>
    <string name="EmptyEmailandPass">Enter email and password</string>
    <string name="EmptyEmailField">Enter email address</string>
    <string name="EmptyPasswordField">Enter password</string>
    <string name="EmptyMobileField">Enter mobile number</string>
    <string name="EmptyAddressField">Enter address</string>
    <string name="ShortPassword">Password must be 8 or more characters</string>

    <string name="SignupFailed">Signup failed</string>
    <string name="buttonResetPassword">RESET PASSWORD</string>

    <string name="sharedPrefFile1">com.mc.group3.electricbillmanage.SHARED_PREF_1</string>
    <string name="sharedPrefDefaultUsername">username</string>
    <string name="FirstName">First Name</string>
    <string name="PhoneNo">Phone Number</string>

    <string name="appName">ElectricBillManage</string>
    <string name="dashboardActName">Dashboard</string>
    <string name="accountDetailsActName">Account Details</string>
    <string name="billsActName">Bills</string>
    <string name="complaintsActName">Complaints</string>


    ///>Post Midsem
    <string name="bills_history_string">History</string>
    <string name="bills_pending_string">Pending Bills</string>

</resources>
