<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="com.mc.group3.electricbillmanage.LoginActivity">

    <ImageView
        android:id="@+id/loginLogoImage"
        android:layout_width="170dp"
        android:layout_height="178dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/resetForgotPasswordText"
        android:layout_width="145dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ForgotPassword"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toBottomOf="@+id/loginLogoImage" />


    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/EmailAddressHint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetForgotPasswordText"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/resetForgotPasswordButton"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="10sp"
        android:text="@string/buttonResetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
